fixing scroll on mobile

--- a/src/app/user/home/page.module.css
+++ b/src/app/user/home/page.module.css
@@ -79,8 +79,9 @@
     }
 
     .MainContent {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        /*grid-template-columns: 1fr;*/
+        /*grid-template-rows: 1fr 1fr;*/
+        display: block;
     }
 
     .NavBar {
